--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css" />   
 </head>
 <body>
+    <!-- Script -->
+    <script>
+        function openMenu() {
+            document.getElementById("side-menu").style.width = "250px";
+        }
+
+        function closeMenu() {
+            document.getElementById("side-menu").style.width = "0";
+        }
+    </script>
     <!-- NavBar -->
     <nav class="navbar">
         <div class="navbar-logo">
@@ -15,7 +25,15 @@
             </a>
         </div>
         <h1 class="navbar-title">Captains Datathon Team</h1>
-        <div class="navbar-menu">
+        <!-- Side Menu -->
+        <div id="side-menu" class="side-menu">
+            <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+            <a href="index.html">Home</a>
+            <a href="scanner.html">Mosquito Scanner</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </div>
+        <div class="navbar-menu" onclick="openMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
