--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <ul class="navbar-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="scanner.html">Mosquito Scanner</a></li>
+            <li><a href="#">Mosquito Info</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
